--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
+    "strict": true,
+    "strictPropertyInitialization": false,
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
